Split the Types for CriticalServiceDescribe and CriticalServiceStatusDescribe
